gke-fleets-with-config-sync-and-argo-rollouts/gke-poc-config-sync/app-clusters-config/asm-gateways/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asm-gateways
  annotations:
    configmanagement.gke.io/cluster-selector: selector-prod
  labels:
    istio.io/rev: asm-managed
